Removed deprecated sbt option MaxPermSize